[package]
name = "stm32f4xx-example"
version = "0.1.0"
authors = ["garasubo <garasubo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f429"] }
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
